@@ -1,3 +1,7 @@
+2004-08-23  Sam Steingold  <sds@gnu.org>
+
+	* modules/pcre/cpcre.c (PCRE-EXEC): allocate ovector of proper size
+
 2004-06-20  Bruno Haible  <bruno@clisp.org>
 
 	* record.d (CLOS:STANDARD-INSTANCE-ACCESS,
